fix the sitemap issue

--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,9 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://triviaverse.site/" />
     
+    <!-- Sitemap -->
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
+    
     <!-- Icons -->
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
